# refactorAwayIO

./: .gitignore  LICENSE  README.md  refactorAwayIO.cabal
app/: Main.hs
src/Step1/: Impl1.hs  Storage1.hs
src/Step2/: Impl2.hs  Storage2.hs
src/Step3/: Impl3.hs
test/: PipelineSpec.hs
