name:                refactorAwayIO
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/refactorAwayIO#readme
license:             OBSD
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2017 Author name here
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  hs-source-dirs:      src
  exposed-modules:     Step1.Impl1
                     , Step1.Storage1
                     , Step2.Impl2
                     , Step2.Storage2
                     , Step3.Impl3
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , text
                     , containers
                     , mtl
                     , transformers
                     , stm
                     , safe-exceptions
  default-language:    Haskell2010

executable refactorAwayIO-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  build-depends:       base
                     , refactorAwayIO
                     , protolude
                     , text
                     , containers
                     , safe-exceptions
                     , ansi-terminal
                     , mtl
  default-language:    Haskell2010

test-suite refactorAwayIO-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , refactorAwayIO
                     , protolude
                     , text
                     , containers
                     , mtl
                     , transformers
                     , safe-exceptions
                     , hspec
  other-modules:       PipelineSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/refactorAwayIO
